Added image button

--- a/VoiceBasedApp/VoiceBasedApp.Android/VoiceBasedApp.Android.csproj
+++ b/VoiceBasedApp/VoiceBasedApp.Android/VoiceBasedApp.Android.csproj
@@ -95,9 +95,6 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Resources\drawable\" />
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\VoiceBasedApp\VoiceBasedApp.csproj">
       <Project>{297EA60B-E42D-4742-90C0-4D62741E6AFD}</Project>
       <Name>VoiceBasedApp</Name>
@@ -117,6 +114,9 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\mipmap-xxxhdpi\hearIcon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\mic.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
