--- a/VoiceBasedApp/VoiceBasedApp.Android/VoiceBasedApp.Android.csproj
+++ b/VoiceBasedApp/VoiceBasedApp.Android/VoiceBasedApp.Android.csproj
@@ -64,12 +64,13 @@
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CustomButtonRenderer.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="MainApplication.cs" />
     <Compile Include="RecognitionListener.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SpeechToTextImplementation.cs" />
+    <Compile Include="SpeechToTextService.cs" />
     <Compile Include="SplashActivity.cs" />
   </ItemGroup>
   <ItemGroup>
