--- a/VoiceBasedApp/VoiceBasedApp.iOS/VoiceBasedApp.iOS.csproj
+++ b/VoiceBasedApp/VoiceBasedApp.iOS/VoiceBasedApp.iOS.csproj
@@ -63,9 +63,10 @@
     <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="CustomButtonRenderer.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
-    <Compile Include="SpeechToTextImplementation.cs" />
+    <Compile Include="SpeechToTextService.cs" />
     <None Include="Entitlements.plist" />
     <None Include="Info.plist" />
     <Compile Include="Properties\AssemblyInfo.cs" />
