--- a/VoiceBasedApp/VoiceBasedApp.Android/VoiceBasedApp.Android.csproj
+++ b/VoiceBasedApp/VoiceBasedApp.Android/VoiceBasedApp.Android.csproj
@@ -121,7 +121,7 @@
     <AndroidResource Include="Resources\drawable\mic.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\splashscreen.jpg" />
+    <AndroidResource Include="Resources\drawable\icon.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
