--- a/VoiceBasedApp/VoiceBasedApp/VoiceBasedApp.csproj
+++ b/VoiceBasedApp/VoiceBasedApp/VoiceBasedApp.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -11,13 +11,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Images\StartSpeaking.PNG" />
-    <None Remove="Images\StopSpeaking.png" />
+    <None Remove="Images\mic.png" />
+    <None Remove="Images\MicrophoneOnMute.png" />
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="Images\StartSpeaking.PNG" />
-    <EmbeddedResource Include="Images\StopSpeaking.png" />
+    <EmbeddedResource Include="Images\mic.png" />
+    <EmbeddedResource Include="Images\MicrophoneOnMute.png" />
   </ItemGroup>
 
   <ItemGroup>
