--- a/TestApp2.Android/TestApp2.Android.csproj
+++ b/TestApp2.Android/TestApp2.Android.csproj
@@ -100,6 +100,9 @@
     <PackageReference Include="Plugin.CurrentActivity">
       <Version>2.1.0.4</Version>
     </PackageReference>
+    <PackageReference Include="Plugin.Permissions">
+      <Version>6.0.1</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Android.Support.Design" Version="28.0.0.3" />
     <PackageReference Include="Xamarin.Android.Support.Core.Utils" Version="28.0.0.3" />
     <PackageReference Include="Xamarin.Android.Support.CustomTabs" Version="28.0.0.3" />
@@ -109,6 +112,16 @@
     <AndroidResource Include="Resources\layout\Main.xml">
       <SubType>Designer</SubType>
     </AndroidResource>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\VoiceBasedApp\VoiceBasedApp.Android\VoiceBasedApp.Android.csproj">
+      <Project>{85b7d97f-ef82-4783-866f-ec844eea1d47}</Project>
+      <Name>VoiceBasedApp.Android</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\VoiceBasedApp\VoiceBasedApp\VoiceBasedApp.csproj">
+      <Project>{17d66dc7-ba9c-4a10-86f0-4249b4ecdc11}</Project>
+      <Name>VoiceBasedApp</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
