--- a/TestApp/TestApp/TestApp.csproj
+++ b/TestApp/TestApp/TestApp.csproj
@@ -21,11 +21,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Plugin.Permissions" Version="6.0.1" />
     <PackageReference Include="Xamarin.Forms" Version="4.7.0.813-pre2" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\VoiceToCommand\VoiceToCommand.csproj" />
+    <ProjectReference Include="..\..\VoiceToCommandLibrary\VoiceToCommandLibrary.csproj" />
   </ItemGroup>
 </Project>
