--- a/TestApp2.Android/TestApp2.Android.csproj
+++ b/TestApp2.Android/TestApp2.Android.csproj
@@ -114,13 +114,13 @@
     </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\VoiceBasedApp\VoiceBasedApp.Android\VoiceBasedApp.Android.csproj">
-      <Project>{85b7d97f-ef82-4783-866f-ec844eea1d47}</Project>
-      <Name>VoiceBasedApp.Android</Name>
+    <ProjectReference Include="..\VoiceToCommandLib.Android\VoiceToCommandLib.Android.csproj">
+      <Project>{32411f5d-facf-4432-8083-adc2ad6f4b00}</Project>
+      <Name>VoiceToCommandLib.Android</Name>
     </ProjectReference>
-    <ProjectReference Include="..\VoiceBasedApp\VoiceBasedApp\VoiceBasedApp.csproj">
-      <Project>{17d66dc7-ba9c-4a10-86f0-4249b4ecdc11}</Project>
-      <Name>VoiceBasedApp</Name>
+    <ProjectReference Include="..\VoiceToCommandLibrary\VoiceToCommandLibrary.csproj">
+      <Project>{d5990123-88d2-462f-aafd-f2435be0a96b}</Project>
+      <Name>VoiceToCommandLibrary</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
