--- a/VoiceToCommandLib.Android/VoiceToCommandLib.Android.csproj
+++ b/VoiceToCommandLib.Android/VoiceToCommandLib.Android.csproj
@@ -77,9 +77,9 @@
     <Folder Include="Resources\drawable\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\VoiceToCommand\VoiceToCommand.csproj">
-      <Project>{7c0931f7-4933-488b-a4cf-7802b7430721}</Project>
-      <Name>VoiceToCommand</Name>
+    <ProjectReference Include="..\VoiceToCommandLibrary\VoiceToCommandLibrary.csproj">
+      <Project>{d5990123-88d2-462f-aafd-f2435be0a96b}</Project>
+      <Name>VoiceToCommandLibrary</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
