--- a/TestApp/TestApp.Android/TestApp.Android.csproj
+++ b/TestApp/TestApp.Android/TestApp.Android.csproj
@@ -55,7 +55,13 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Autofac">
-      <Version>4.1.0</Version>
+      <Version>5.2.0</Version>
+    </PackageReference>
+    <PackageReference Include="Autofac.Extras.CommonServiceLocator">
+      <Version>6.0.0</Version>
+    </PackageReference>
+    <PackageReference Include="CommonServiceLocator">
+      <Version>2.0.5</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="4.7.0.813-pre2" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
