Moved Common Code

--- a/VoiceToCommandLibrary/VoiceToCommandLibrary.csproj
+++ b/VoiceToCommandLibrary/VoiceToCommandLibrary.csproj
@@ -48,6 +48,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CommonCode.cs" />
     <Compile Include="IVoiceToCommandService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
