--- a/TestApp/TestApp/TestApp.csproj
+++ b/TestApp/TestApp/TestApp.csproj
@@ -24,11 +24,8 @@
     <PackageReference Include="Autofac" Version="5.2.0" />
     <PackageReference Include="CommonServiceLocator" Version="2.0.5" />
     <PackageReference Include="Plugin.Permissions" Version="6.0.1" />
+    <PackageReference Include="VoiceToCommandCore" Version="1.0.7474.20460" />
     <PackageReference Include="Xamarin.Forms" Version="4.7.0.813-pre2" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\VoiceToCommandLibrary\VoiceToCommandLibrary.csproj" />
   </ItemGroup>
 </Project>
