--- a/TestApp/TestApp/TestApp.csproj
+++ b/TestApp/TestApp/TestApp.csproj
@@ -28,4 +28,8 @@
     <PackageReference Include="Xamarin.Forms" Version="4.7.0.813-pre2" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\VoiceToCommandLibrary\VoiceToCommandLibrary.csproj" />
+  </ItemGroup>
 </Project>
