--- a/VoiceToCommandLib.Android/VoiceToCommandLib.Android.csproj
+++ b/VoiceToCommandLib.Android/VoiceToCommandLib.Android.csproj
@@ -56,11 +56,20 @@
     <None Include="Resources\AboutResources.txt" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="AWSSDK.Core">
+      <Version>3.3.107.13</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.PhoneticMatching">
+      <Version>0.0.7</Version>
+    </PackageReference>
     <PackageReference Include="Plugin.CurrentActivity">
       <Version>2.1.0.4</Version>
     </PackageReference>
     <PackageReference Include="Plugin.Permissions">
       <Version>6.0.1</Version>
+    </PackageReference>
+    <PackageReference Include="Xam.Plugin.Connectivity">
+      <Version>3.2.0</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Android.Support.v7.AppCompat" Version="28.0.0.3" />
     <PackageReference Include="Xamarin.Essentials">
@@ -77,9 +86,9 @@
     <Folder Include="Resources\drawable\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\VoiceToCommandLibrary\VoiceToCommandLibrary.csproj">
-      <Project>{d5990123-88d2-462f-aafd-f2435be0a96b}</Project>
-      <Name>VoiceToCommandLibrary</Name>
+    <ProjectReference Include="..\VoiceBasedApp\VoiceBasedApp\VoiceBasedApp.csproj">
+      <Project>{17d66dc7-ba9c-4a10-86f0-4249b4ecdc11}</Project>
+      <Name>VoiceBasedApp</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
